Basic website functional

--- a/templates/navigation.html
+++ b/templates/navigation.html
@@ -1,12 +1,12 @@
 <!-- Navigation -->
-  <nav class="navbar navbar-light navbar-fixed-top">
+  <nav class="navbar navbar-dark navbar-fixed-top">
     <div class="container">
       <div class="navbar-header">
       <button class="navbar-toggle collapsed btn-xs" type="button" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar" aria-label="Toggle navigation">
           <i class="fa fa-navicon" aria-hidden="true"></i>
 </button>
         <a class="navbar-brand" href="/">
-          <img src="{{url_for('static', filename='img/logo.png')}}" style="width: 64px; height: 64;"
+          <img src="{{url_for('static', filename='img/kirigami-snowflake.jpg')}}" style="width: 64px; height: 64;"
            href="{{ url_for('index') }}"/>
         </a>
       </div>
