--- a/templates/register.html
+++ b/templates/register.html
@@ -52,7 +52,7 @@
   </p>
   <button class="btn btn-primary" type="submit"><i class="fa fa-user" aria-hidden="true"></i>&nbsp;&nbsp;Sign Up</button>
   <br><br>
-  <p>By signing up, I agree to the <a href="{{url_for('Privacy')}}">Privacy Policy and End User Agreement.</a>
+  <p>By signing up, I agree to the <a href="{{url_for('privacy')}}">Privacy Policy and End User Agreement.</a>
   <p>Already have an account? <a class="btn btn-primary btn-xs" href="/login">Login</a></p>
 </form>
 </div>
