--- a/templates/layout.html
+++ b/templates/layout.html
@@ -23,8 +23,8 @@
     <meta property="twitter:image:src" content="static/img/logo.png">
     <meta name="description" content="Frost family recipes">
     <meta name="author" content="Alan Frost">
-    <link rel="shortcut icon" type="image/x-icon" href="static/img/favicon.ico" />
-    <link rel="icon" type="image/x-icon" href="static/img/favicon.ico" />
+    <link rel="shortcut icon" type="image/x-icon" href="{{url_for('static', filename='img/favicon.ico')}}" />
+    <link rel="icon" type="image/x-icon" href="{{url_for('static', filename='img/favicon.ico')}}" />
 
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
