--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -55,11 +55,45 @@ th {
   background-color: #e5e5e5;
 }
 
-@media (min-width: 768px) {
+@media (max-width: 768px) {
   .main {
     padding-right: 40px;
     padding-left: 40px;
   }
+    .navbar-header {
+        float: none;
+        padding: 0;
+    }
+    .navbar-left,.navbar-right {
+        float: none !important;
+    }
+    .navbar-toggle {
+        display: block;
+    }
+    .navbar-collapse {
+        border-top: 1px solid transparent;
+        box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
+    }
+    .navbar-fixed-top {
+        top: 0;
+        border-width: 0 0 1px;
+    }
+    .navbar-collapse.collapse {
+        display: none!important;
+    }
+    .navbar-nav {
+        float: none!important;
+        padding: 0;
+    }
+    .navbar-nav>li {
+        float: none;
+        width: 50%;
+        border-top: 1px solid;
+        background-color: #e5e5e5;
+    }
+    .collapse.in{
+        display:block !important;
+    }
 }
 
 /* Custom page CSS
@@ -121,13 +155,12 @@ code {
   font-weight: normal;
 }
 
-.form-signin .form-control {
+.form-signin {
   position: relative;
   height: auto;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
-  padding: 10px;
   font-size: 16px;
 }
 
@@ -136,12 +169,14 @@ code {
 }
 
 .form-signin input[type="email or username"] {
+  padding: 10px;
   margin-bottom: -1px;
   border-bottom-right-radius: 0;
   border-bottom-left-radius: 0;
 }
 
 .form-signin input[type="password"] {
+  padding: 10px;
   margin-bottom: 10px;
   border-top-left-radius: 0;
   border-top-right-radius: 0;
@@ -170,7 +205,7 @@ code {
 
 .footer-widget-social a {
   padding: 10px;
-  float: left;
+  float: right;
   margin: 0 3px;
 }
 
