--- a/templates/layout.html
+++ b/templates/layout.html
@@ -47,21 +47,18 @@
     </div>
 
     <footer>
-      <div class="container">
-        <div class="col-lg-8 col-md-8 col-sm-8">
-          <div class="f-b">Copyright &copy 2017 Alan Frost. All Rights Reserved.</div>
+      <div class="container-fluid">
+        <div class="col-lg-6 col-md-6 col-sm-6">
+          <div class="f-b">Copyright &copy; 2017 Alan Frost. All Rights Reserved.</div>
         </div>
-        <div class="col-lg-3 col-md-3 col-sm-3">
+        <div class="col-lg-6 col-md-6 col-sm-6">
           <div class="footer-widget-social">
-            &nbsp;<a data-tooltip="facebook" href="https://facebook.com"><i class="fa fa-facebook-square fa-lg"></i></a>
-            &nbsp;<a data-tooltip="Linkedin" href="https://www.linkedin.com/alan"><i class="fa fa-linkedin-square fa-lg"></i></a>
-            &nbsp;<a data-tooltip="twitter" href="https://twitter.com/frostyalan"><i class="fa fa-twitter-square fa-lg"></i></a>
+            &nbsp;<a data-toggle="tooltip" title="Back to top" href="#top"><i class="fa fa-chevron-up fa-lg"></i></a>
+            &nbsp;<a data-toggle="tooltip" title="Twitter" href="https://twitter.com/frostyalan"><i class="fa fa-twitter-square fa-lg"></i></a>
+            &nbsp;<a data-toggle="tooltip" title="Pinterest" href="https://pinterest.com/frostyalan"><i class="fa fa-pinterest-square fa-lg"></i></a>
+            &nbsp;<a data-toggle="tooltip" title="Linkedin" href="https://www.linkedin.com/alan"><i class="fa fa-linkedin-square fa-lg"></i></a>
+            &nbsp;<a data-toggle="tooltip" title="Facebook" href="https://facebook.com"><i class="fa fa-facebook-square fa-lg"></i></a>
           </div>
-        </div>
-        <div class="col-lg-1 col-md-1 col-sm-1">
-          <a href="#top"><button type="button" class="btn btn-primary btn-xs" data-toggle="tooltip" data-placement="top" title="Back to top">
-          <i class="fa fa-chevron-up" aria-hidden="true"></i>
-</button></a>
         </div>
       </div>
     </footer>
