--- a/templates/navigation.html
+++ b/templates/navigation.html
@@ -1,32 +1,41 @@
 <!-- Navigation -->
-  <nav class="navbar navbar-dark navbar-fixed-top">
-    <div class="container">
-      <div class="navbar-header">
-      <button class="navbar-toggle collapsed btn-xs" type="button" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar" aria-label="Toggle navigation">
-          <i class="fa fa-navicon" aria-hidden="true"></i>
-</button>
-        <a class="navbar-brand" href="/">
-          <img src="{{url_for('static', filename='img/kirigami-snowflake.jpg')}}" style="width: 64px; height: 64;"
-           href="{{ url_for('index') }}"/>
-        </a>
-      </div>
-      <div class="collapse navbar-collapse" id="navbar">
-        <ul class="nav navbar-nav">
-          <li><a class="nav-item nav-link" href="{{url_for('recipes')}}">Recipes</a></li>
-          {% if current_user.confirmed and current_user.is_authenticated %}
-            <li><a class="nav-item nav-link" href="{{ url_for('profile') }}">Profile</a></li>
-          {% elif current_user.is_authenticated %}
-            <li><a class="nav-item nav-link" href="{{ url_for('confirm') }}">Confirm</a></li>
-          {% endif %}
-        </ul>
-        <ul class="nav navbar-nav navbar-right">
-          {% if current_user.is_authenticated %}
-            <li><a class="nav-item nav-link" href="{{ url_for('logout') }}">Logout</a></li>
-          {% else %}
-            <li><a class="nav-item nav-link" href="{{ url_for('register') }}"><i class="fa fa-user" aria-hidden="true"></i>&nbsp;Sign Up</a></li>
-            <li><a class="nav-item nav-link" href="{{ url_for('login') }}"><i class="fa fa-sign-in" aria-hidden="true"></i>&nbsp;Login</a></li>
-          {% endif %}
-        </ul>
-      </div>
+<nav class="navbar navbar-dark navbar-fixed-top">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="/">
+        <img src="{{url_for('static', filename='img/kirigami-snowflake.jpg')}}" style="width: 40px; height: 40;"
+         href="{{ url_for('index') }}"/>
+      </a>
+      <button class="navbar-toggle collapsed btn-xs" type="button" data-toggle="collapse" data-target="#mynavbar" aria-expanded="false" aria-controls="navbar" aria-label="Toggle navigation">
+        <i class="fa fa-navicon" aria-hidden="true"></i>
+      </button>
     </div>
-  </nav>
+    <div class="collapse navbar-collapse" id="mynavbar">
+      <ul class="nav navbar-nav">
+        <li><a class="nav-item nav-link" href="{{url_for('recipes')}}"><i class="fa fa-spoon" aria-hidden="true"></i>&nbsp;Recipes</a></li>
+        {% if current_user.confirmed and current_user.is_authenticated %}
+          <li><a class="nav-item nav-link" href="{{ url_for('profile') }}">Profile</a></li>
+        {% elif current_user.is_authenticated %}
+          <li><a class="nav-item nav-link" href="{{ url_for('confirm') }}">Confirm</a></li>
+        {% endif %}
+      </ul>
+      <ul class="nav navbar-nav navbar-right">
+        
+      <li><form>
+        <div class="input-group nav-link">
+          <span class="input-group-addon">
+            <i class="fa fa-search" aria-hidden="true"></i>
+          </span>
+          <input type="text" class="form-control" placeholder="Search">
+        </div></li>
+      </form>
+        {% if current_user.is_authenticated %}
+          <li><a class="nav-item nav-link" href="{{ url_for('logout') }}">Logout</a></li>
+        {% else %}
+          <li><a class="nav-item nav-link" href="{{url_for('register')}}"><i class="fa fa-user" aria-hidden="true"></i>&nbsp;Sign Up</a></li>
+          <li><a class="nav-item nav-link" href="{{url_for('login')}}"><i class="fa fa-sign-in" aria-hidden="true"></i>&nbsp;Login</a></li>
+        {% endif %}
+      </ul>
+    </div>
+  </div>
+</nav>
