--- a/templates/login.html
+++ b/templates/login.html
@@ -30,9 +30,7 @@
   </p>
   <p>
   <div class="checkbox">
-    <label>
-      <input type="checkbox" value="remember-me"> Remember me
-    </label>
+    <label><input type="checkbox" value="remember-me"> Remember me</label>
   </div>
   </p>
   <button class="btn btn-primary" type="submit"><i class="fa fa-sign-in" aria-hidden="true"></i>&nbsp;&nbsp;Login</button>
