--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -96,6 +96,23 @@ th {
     }
 }
 
+/* Sidebar modules for boxing content */
+.sidebar-module {
+  padding: 15px;
+  margin: 0 -15px 15px;
+}
+.sidebar-module-inset {
+  padding: 15px;
+  background-color: #f5f5f5;
+  border-radius: 4px;
+  border-color: #e5e5e5;
+}
+.sidebar-module-inset p:last-child,
+.sidebar-module-inset ul:last-child,
+.sidebar-module-inset ol:last-child {
+  margin-bottom: 0;
+}
+
 /* Custom page CSS
 -------------------------------------------------- */
 
