--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -33,12 +33,14 @@
       <div class="sidebar-module-inset">
         <h4>Recipes</h4>
         <ol class="list-unstyled">
-          <li>Chicken</li>
           <li>Breakfast</li>
+          <li>Desert</li>
+          <li>Mexican</li>
+          <li>Chicken</li>
           <li>Vegetables</li>
           <li>Salmon</li>
           <li>Seafood</li>
-          <li>Desert</li>
+          <li>Shrimp</li>
         </ol>
       </div><!--/siderbar-module-inset-->
     </div><!--/col-sm-3-->
