--- a/templates/login.html
+++ b/templates/login.html
@@ -4,7 +4,7 @@
 
 <div class="container">
 <form class="form-signin" role="form" method="post" action="">
-  <h2 class="form-signin-heading">Please sign in</h2>
+  <h3 class="form-signin-heading">Log In</h3>
   {{ form.csrf_token }}
   <p>
   <i class="fa fa-envelope-o fa-fw"></i>
