--- a/templates/register.html
+++ b/templates/register.html
@@ -4,7 +4,7 @@
 
 <div class="container">
 <form class="form-signin" role="form" method="post" action="">
-  <h2 class="form-signin-heading">Please Register</h2>
+  <h3 class="form-signin-heading">Sign Up</h3>
   {{ form.csrf_token }}
   <p>
   <i class="fa fa-user-o fa-fw"></i>
