--- a/templates/confirm.html
+++ b/templates/confirm.html
@@ -4,7 +4,7 @@
 
 <div class="container">
 <form class="form-confirm" role="form" method="post" action="">
-  <h2 class="form-signin-heading">Please Confirm</h2>
+  <h3 class="form-signin-heading">Confirm</h3>
   {{ form.csrf_token }}
   <p>
   <i class="fa fa-user-o fa-fw"></i>
