--- a/templates/layout.html
+++ b/templates/layout.html
@@ -46,22 +46,25 @@
 
     </div>
 
-    <footer>
-      <div class="container-fluid">
-        <div class="col-lg-8 col-md-8 col-sm-8">
+    <div class="footer">
+      <div class="container">
+        <div class="row">
+        <div class="col-sm-7">
           <div class="f-b">Copyright &copy; 2017 Alan Frost. All Rights Reserved.</div>
         </div>
-        <div class="col-lg-4 col-md-4 col-sm-4">
+        <div class="col-sm-5">
           <div class="footer-widget-social">
             &nbsp;<a data-toggle="tooltip" title="Back to top" href="#top"><i class="fa fa-chevron-up fa-lg"></i></a>
-            &nbsp;<a data-toggle="tooltip" title="Twitter" href="https://twitter.com/frostyalan"><i class="fa fa-twitter-square fa-lg"></i></a>
-            &nbsp;<a data-toggle="tooltip" title="Pinterest" href="https://pinterest.com/frostyalan"><i class="fa fa-pinterest-square fa-lg"></i></a>
-            &nbsp;<a data-toggle="tooltip" title="Linkedin" href="https://www.linkedin.com/alan"><i class="fa fa-linkedin-square fa-lg"></i></a>
             &nbsp;<a data-toggle="tooltip" title="Facebook" href="https://facebook.com"><i class="fa fa-facebook-square fa-lg"></i></a>
+            &nbsp;<a data-toggle="tooltip" title="Instagram" href="https://instagram.com"><i class="fa fa-instagram fa-lg"></i></a>
+            &nbsp;<a data-toggle="tooltip" title="Linkedin" href="https://www.linkedin.com/alan"><i class="fa fa-linkedin-square fa-lg"></i></a>
+            &nbsp;<a data-toggle="tooltip" title="Pinterest" href="https://pinterest.com/frostyalan"><i class="fa fa-pinterest-square fa-lg"></i></a>
+            &nbsp;<a data-toggle="tooltip" title="Twitter" href="https://twitter.com/frostyalan"><i class="fa fa-twitter-square fa-lg"></i></a>
           </div>
         </div>
+        </div>
       </div>
-    </footer>
+    </div>
 
 
     <!-- scripts -->
