--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -43,11 +43,12 @@
           <li><a href="/recipes?recipe=Strawberry%20Pancakes&category=Pancakes">Pancakes</a></li>
           <li>Dessert</li>
           <li>Mexican</li>
-          <li><a href="/recipes?recipe=Korean%20Meatballs&category=Chicken">Chicken</a></li>
+          <li><a href="/recipes?recipe=Korean%20Meatballs&category=Turkey">Turkey</a></li>
+          <li><a href="/recipes?recipe=Orange%20Chicken&category=Chicken">Chicken</a></li>
           <li>Vegetables</li>
           <li>Salmon</li>
           <li>Seafood</li>
-          <li>Shrimp</li>
+          <li><a href="/recipes?recipe=Cilantro Chile Lime Shrimp&category=Shrimp">Shrimp</a></li>
         </ol>
       </div><!--/siderbar-module-inset-->
     </div><!--/col-sm-3-->
