Added more recipes

--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -39,15 +39,14 @@
       <div class="sidebar-module-inset">
         <h4><i class="fa fa-snowflake-o" aria-hidden="true"></i> Recipes</h4>
         <ol class="list-unstyled">
-          <li>Breakfast</li>
-          <li><a href="/recipes?recipe=Strawberry%20Pancakes&category=Pancakes">Pancakes</a></li>
-          <li>Dessert</li>
-          <li>Mexican</li>
+          <li><a href="/recipes?recipe=Diced%20Potatoes&category=Potatoes">Potatoes</a></li>
+          <li><a href="/recipes?recipe=Apricot%20Scones&category=Breakfast">Scones</a></li>
+          <li><a href="/recipes?recipe=Strawberry%20Pancakes&category=Breakfast">Pancakes</a></li>
+          <li><a href="/recipes?recipe=Buttermilk%20Waffles&category=Breakfast">Waffles</a></li>
           <li><a href="/recipes?recipe=Korean%20Meatballs&category=Turkey">Turkey</a></li>
           <li><a href="/recipes?recipe=Orange%20Chicken&category=Chicken">Chicken</a></li>
-          <li>Vegetables</li>
-          <li>Salmon</li>
-          <li>Seafood</li>
+          <li><a href="/recipes?recipe=Ginger%20Carrots&category=Vegetables">Vegetables</li>
+          <li><a href="/recipes?recipe=Grilled%20Salmon&category=Salmon">Salmon</li>
           <li><a href="/recipes?recipe=Cilantro Chile Lime Shrimp&category=Shrimp">Shrimp</a></li>
         </ol>
       </div><!--/siderbar-module-inset-->
