Added more recipes

--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -41,11 +41,12 @@
         <ol class="list-unstyled">
           <li><a href="/recipes?recipe=Diced%20Potatoes&category=Potatoes">Potatoes</a></li>
           <li><a href="/recipes?recipe=Apricot%20Scones&category=Breakfast">Scones</a></li>
+          <li><a href="/recipes?recipe=Swedish%20Pancakes&category=Desert">Desert</a></li>
           <li><a href="/recipes?recipe=Strawberry%20Pancakes&category=Breakfast">Pancakes</a></li>
           <li><a href="/recipes?recipe=Buttermilk%20Waffles&category=Breakfast">Waffles</a></li>
           <li><a href="/recipes?recipe=Korean%20Meatballs&category=Turkey">Turkey</a></li>
           <li><a href="/recipes?recipe=Orange%20Chicken&category=Chicken">Chicken</a></li>
-          <li><a href="/recipes?recipe=Ginger%20Carrots&category=Vegetables">Vegetables</li>
+          <li><a href="/recipes?recipe=Asian%20Carrots&category=Vegetables">Vegetables</li>
           <li><a href="/recipes?recipe=Grilled%20Salmon&category=Salmon">Salmon</li>
           <li><a href="/recipes?recipe=Cilantro Chile Lime Shrimp&category=Shrimp">Shrimp</a></li>
         </ol>
