--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -28,7 +28,7 @@
           <li>1 tbsp cooking oil</li>
           <li>&#x2154; cup buttermilk</li>
         </ul>
-        <h5><i class="fa fa-tasks" aria-hidden="true"></i> Instructions<h5>
+        <h5><i class="fa fa-list-ol" aria-hidden="true"></i> Instructions<h5>
         <p>Combine flour, oats, baking powder and spice in mixing bowl, push to side.
            Add egg on edge, beat by itself, add oil and pumpkin, mix to blend, add half
            of the buttermilk and blend. Mix together with flour mixture and remaining
