--- a/templates/layout.html
+++ b/templates/layout.html
@@ -9,7 +9,7 @@
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <meta name="apple-itunes-app" content="app-id=761389261, affiliate-data=, app-argument=">
   <meta property="twitter:account_id" content="4503599627902758" />
-  <title>Frosty Webapp</title>
+  <title>Frosty Web</title>
     <!-- meta -->
     <meta property="og:url" content="https://example.com">
     <meta property="og:site_name" content="Frosty">
@@ -74,7 +74,8 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     <script src="https://use.fontawesome.com/3142141c42.js"></script>
 
-    <script src="{{url_for('static', filename='main.js')}}" type="text/javascript"></script>
+    <script src="{{url_for('static', filename='js/forge.min.js')}}" type="text/javascript"></script>
+    <script src="{{url_for('static', filename='js/main.js')}}" type="text/javascript"></script>
     {% block js %}{% endblock %}
 
   </body>
