--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -94,11 +94,11 @@ th {
 
 /* Sidebar modules for boxing content */
 .sidebar-module {
-  padding-top: 10px;
-  margin: 0 -15px 15px;
+  padding-top: 4px;
+  margin: 0 -8px 8px;
 }
 .sidebar-module-inset {
-  padding: 15px;
+  padding: 8px;
   background-color: #e5e5e5;
   border-radius: 4px;
   border-color: #bebebe;
@@ -219,3 +219,39 @@ code {
   color: #353e47;
 }
 
+button.accordion {
+    background-color: #eee;
+    color: #444;
+    cursor: pointer;
+    padding: 4px;
+    width: 100%;
+    border: none;
+    text-align: left;
+    outline: none;
+    font-size: 15px;
+    transition: 0.4s;
+}
+
+button.accordion.active, button.accordion:hover {
+    background-color: #ddd;
+}
+
+button.accordion:after {
+    content: '\002B';
+    color: #777;
+    font-weight: bold;
+    float: right;
+    margin-left: 4px;
+}
+
+button.accordion.active:after {
+    content: "\2212";
+}
+
+div.panel {
+    padding: 0 4px;
+    background-color: white;
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.2s ease-out;
+}
