Added cauliflower and pasta

--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -42,34 +42,37 @@
           <p><a href="/recipes?recipe=Orange%20Chicken">Orange Chicken</a></p>
           <p><a href="/recipes?recipe=Szechuan%20Chicken">Szechuan Chicken</a></p>
           <p><a href="/recipes?recipe=Sesame%20Chicken">Sesame Chicken</a></p>
-          <p><a href="/recipes?recipe=Korean%20Meatballs">Turkey</a></p>
+          <p><a href="/recipes?recipe=Korean%20Meatballs">Korean Meatballs</a></p>
         </div>
         <button class="accordion">Breakfast</button>
         <div class="panel">
           <a href="/recipes?recipe=Strawberry%20Pancakes">StrawberryPancakes</a><br>
           <a href="/recipes?recipe=Apricot%20Scones">Apricot Scones</a><br>
-          <a href="/recipes?recipe=Banana Muffins">Buttermilk Waffles</a><br>
-          <a href="/recipes?recipe=Pumpkin Muffins">Pumpkin Waffles</a><br>
-          <a href="/recipes?recipe=Banana Muffins">Banana Muffins</a><br>
-          <a href="/recipes?recipe=Pumpkin Muffins">Pumpkin Muffins</a><br>
+          <a href="/recipes?recipe=Banana%20Muffins">Buttermilk Waffles</a><br>
+          <a href="/recipes?recipe=Pumpkin%20Muffins">Pumpkin Waffles</a><br>
+          <a href="/recipes?recipe=Banana%20Muffins">Banana Muffins</a><br>
+          <a href="/recipes?recipe=Pumpkin%20Muffins">Pumpkin Muffins</a><br>
         </div>
         <button class="accordion">Seafood</button>
         <div class="panel">
           <a href="/recipes?recipe=Grilled%20Salmon">Salmon</a><br>
-          <a href="/recipes?recipe=Cilantro Chile Lime Shrimp">Shrimp</a>
+          <a href="/recipes?recipe=Cilantro%20Chile%20Lime%20Shrimp">Shrimp</a>
         </div>
-        <button class="accordion">Desert</button>
+        <button class="accordion">Dessert</button>
         <div class="panel">
           <a href="/recipes?recipe=Swedish%20Pancakes">Crepes</a>
         </div>
-        <button class="accordion">Potatoes</button>
+        <button class="accordion">Italian</button>
+          <a href="/recipes?recipe=Meatball%20Marinara">Meatball Marinara</a>
+          <a href="/recipes?recipe=Pizza">Pizza</a>
         <div class="panel">
-          <a href="/recipes?recipe=Diced%20Potatoes">Diced Potatoes</a><br>
-          <a href="/recipes?recipe=Sweet Potato Fries">Sweet Potato Fries</a>
         </div>
         <button class="accordion">Vegetables</button>
         <div class="panel">
           <a href="/recipes?recipe=Asian%20Carrots">Asian Carrots</a>
+          <a href="/recipes?recipe=Diced%20Potatoes">Diced Potatoes</a><br>
+          <a href="/recipes?recipe=Roasted%20Cauliflower">Roasted Cauliflower</a><br>
+          <a href="/recipes?recipe=Sweet%20Potato%20Fries">Sweet Potato Fries</a>
         </div>
       </div><!--/siderbar-module-inset-->
     </div><!--/col-sm-3-->
