--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -37,42 +37,42 @@
     </div><!--/col-sm-8-->
     <div class="col-sm-3 col-sm-offset-1">
       <div class="sidebar-module-inset">
-        <button class="accordion">Chicken</button>
-        <div class="panel">
-          <p><a href="/recipes?recipe=Orange%20Chicken">Orange Chicken</a></p>
-          <p><a href="/recipes?recipe=Szechuan%20Chicken">Szechuan Chicken</a></p>
-          <p><a href="/recipes?recipe=Sesame%20Chicken">Sesame Chicken</a></p>
-          <p><a href="/recipes?recipe=Korean%20Meatballs">Korean Meatballs</a></p>
-        </div>
         <button class="accordion">Breakfast</button>
         <div class="panel">
-          <a href="/recipes?recipe=Strawberry%20Pancakes">StrawberryPancakes</a><br>
-          <a href="/recipes?recipe=Apricot%20Scones">Apricot Scones</a><br>
-          <a href="/recipes?recipe=Banana%20Muffins">Buttermilk Waffles</a><br>
-          <a href="/recipes?recipe=Pumpkin%20Muffins">Pumpkin Waffles</a><br>
-          <a href="/recipes?recipe=Banana%20Muffins">Banana Muffins</a><br>
-          <a href="/recipes?recipe=Pumpkin%20Muffins">Pumpkin Muffins</a><br>
+          <a href="/recipes?recipe=Strawberry%20Pancakes&category=Breakfast">StrawberryPancakes</a><br>
+          <a href="/recipes?recipe=Apricot%20Scones&category=Breakfast">Apricot Scones</a><br>
+          <a href="/recipes?recipe=Banana%20Muffins&category=Breakfast">Buttermilk Waffles</a><br>
+          <a href="/recipes?recipe=Pumpkin%20Muffins&category=Breakfast">Pumpkin Waffles</a><br>
+          <a href="/recipes?recipe=Banana%20Muffins&category=Breakfast">Banana Muffins</a><br>
+          <a href="/recipes?recipe=Pumpkin%20Muffins&category=Breakfast">Pumpkin Muffins</a><br>
         </div>
-        <button class="accordion">Seafood</button>
+        <button class="accordion">Chicken</button>
         <div class="panel">
-          <a href="/recipes?recipe=Grilled%20Salmon">Salmon</a><br>
-          <a href="/recipes?recipe=Cilantro%20Chile%20Lime%20Shrimp">Shrimp</a>
+          <a href="/recipes?recipe=Orange%20Chicken&category=Asian">Orange Chicken</a><br>
+          <a href="/recipes?recipe=Sesame%20Chicken&category=Asian">Sesame Chicken</a><br>
+          <a href="/recipes?recipe=Szechuan%20Chicken&category=Asian">Szechuan Chicken</a><br>
+          <a href="/recipes?recipe=Korean%20Meatballs&category=Asian">Korean Meatballs</a>
         </div>
         <button class="accordion">Dessert</button>
         <div class="panel">
-          <a href="/recipes?recipe=Swedish%20Pancakes">Crepes</a>
+          <a href="/recipes?recipe=Swedish%20Pancakes&category=Dessert">Crepes</a>
         </div>
         <button class="accordion">Italian</button>
-          <a href="/recipes?recipe=Meatball%20Marinara">Meatball Marinara</a>
-          <a href="/recipes?recipe=Pizza">Pizza</a>
         <div class="panel">
+          <a href="/recipes?recipe=Meatball%20Marinara&category=Italian">Meatball Marinara</a><br>
+          <a href="/recipes?recipe=Pizza&category=Italian">Pizza</a>
+        </div>
+        <button class="accordion">Seafood</button>
+        <div class="panel">
+          <a href="/recipes?recipe=Grilled%20Salmon&category=Seafood">Salmon</a><br>
+          <a href="/recipes?recipe=Cilantro%20Chile%20Lime%20Shrimp&category=Seafood">Shrimp</a>
         </div>
         <button class="accordion">Vegetables</button>
         <div class="panel">
-          <a href="/recipes?recipe=Asian%20Carrots">Asian Carrots</a>
-          <a href="/recipes?recipe=Diced%20Potatoes">Diced Potatoes</a><br>
-          <a href="/recipes?recipe=Roasted%20Cauliflower">Roasted Cauliflower</a><br>
-          <a href="/recipes?recipe=Sweet%20Potato%20Fries">Sweet Potato Fries</a>
+          <a href="/recipes?recipe=Asian%20Carrots&category=Vegetables">Asian Carrots</a><br>
+          <a href="/recipes?recipe=Diced%20Potatoes&category=Vegetables">Diced Potatoes</a><br>
+          <a href="/recipes?recipe=Roasted%20Cauliflower&category=Vegetables">Roasted Cauliflower</a><br>
+          <a href="/recipes?recipe=Sweet%20Potato%20Fries&category=Vegetables">Sweet Potato Fries</a>
         </div>
       </div><!--/siderbar-module-inset-->
     </div><!--/col-sm-3-->
