--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
 
 <div class="container">
   <div class="page-header">
-    <h3>Frosty Webapp</h3>
+    <h3>Frosty Web</h3>
   </div>
   <div class="row">
     <div class="col-md-8">
