--- a/templates/navigation.html
+++ b/templates/navigation.html
@@ -13,13 +13,10 @@
         <h4 class="modal-title">Search</h4>
       </div>
       <div class="modal-body">
-        <div>Search:</div>
+        <div></div>
           <input id="searchPhrase" type="text"/>
-          <button onclick="search()" data-dismiss="modal">Done</button>
+          <button class="btn btn-primary" type="submit"onclick="search()" data-dismiss="modal"><i class="fa fa-search" aria-hidden="true"></i></button>
         </div>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
       </div>
     </div>
   </div>
