--- a/templates/vault.html
+++ b/templates/vault.html
@@ -32,11 +32,8 @@
         <div class="modal-body">
           <div>Enter Password:</div>
             <input id="password" type="password" autocomplete="current-password"/>
-            <button onclick="viewVault()" data-dismiss="modal">Done</button>
+            <button class="btn btn-primary" type="submit"onclick="viewVault()" data-dismiss="modal"><i class="fa fa-unlock" aria-hidden="true"></i></button>
           </div>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
         </div>
       </div>
     </div>
