Update sweet potato fries

--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -41,8 +41,8 @@
         <div class="panel">
           <a href="/recipes?recipe=Strawberry%20Pancakes&category=Breakfast">StrawberryPancakes</a><br>
           <a href="/recipes?recipe=Apricot%20Scones&category=Breakfast">Apricot Scones</a><br>
-          <a href="/recipes?recipe=Banana%20Muffins&category=Breakfast">Buttermilk Waffles</a><br>
-          <a href="/recipes?recipe=Pumpkin%20Muffins&category=Breakfast">Pumpkin Waffles</a><br>
+          <a href="/recipes?recipe=Buttermilk%20Waffles&category=Breakfast">Buttermilk Waffles</a><br>
+          <a href="/recipes?recipe=Pumpkin%20Waffles&category=Breakfast">Pumpkin Waffles</a><br>
           <a href="/recipes?recipe=Banana%20Muffins&category=Breakfast">Banana Muffins</a><br>
           <a href="/recipes?recipe=Pumpkin%20Muffins&category=Breakfast">Pumpkin Muffins</a><br>
         </div>
