--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -64,8 +64,9 @@
         </div>
         <button class="accordion">Seafood</button>
         <div class="panel">
-          <a href="/recipes?recipe=Grilled%20Salmon&category=Seafood">Salmon</a><br>
-          <a href="/recipes?recipe=Cilantro%20Chile%20Lime%20Shrimp&category=Seafood">Shrimp</a>
+          <a href="/recipes?recipe=Grilled%20Salmon&category=Seafood">Grilled Salmon</a><br>
+          <a href="/recipes?recipe=Cilantro%20Chile%20Lime%20Shrimp&category=Seafood">Chile Lime Shrimp</a><br>
+          <a href="/recipes?recipe=Thai%20Baked%20Salmon&category=Seafood">Thai Baked Salmon</a>
         </div>
         <button class="accordion">Vegetables</button>
         <div class="panel">
