Added salmon patties

--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -66,6 +66,7 @@
         <div class="panel">
           <a href="/recipes?recipe=Grilled%20Salmon&category=Seafood">Grilled Salmon</a><br>
           <a href="/recipes?recipe=Cilantro%20Chile%20Lime%20Shrimp&category=Seafood">Chile Lime Shrimp</a><br>
+          <a href="/recipes?recipe=Salmon%20Patties&category=Seafood">Salmon Patties</a><br>
           <a href="/recipes?recipe=Thai%20Baked%20Salmon&category=Seafood">Thai Baked Salmon</a>
         </div>
         <button class="accordion">Vegetables</button>
