--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -37,6 +37,13 @@
     </div><!--/col-sm-8-->
     <div class="col-sm-3 col-sm-offset-1">
       <div class="sidebar-module-inset">
+        <button class="accordion">Asian</button>
+        <div class="panel">
+          <a href="/recipes?recipe=Orange%20Chicken&category=Asian">Orange Chicken</a><br>
+          <a href="/recipes?recipe=Sesame%20Chicken&category=Asian">Sesame Chicken</a><br>
+          <a href="/recipes?recipe=Szechuan%20Chicken&category=Asian">Szechuan Chicken</a><br>
+          <a href="/recipes?recipe=Korean%20Meatballs&category=Asian">Korean Meatballs</a>
+        </div>
         <button class="accordion">Breakfast</button>
         <div class="panel">
           <a href="/recipes?recipe=Strawberry%20Pancakes&category=Breakfast">StrawberryPancakes</a><br>
@@ -45,13 +52,7 @@
           <a href="/recipes?recipe=Pumpkin%20Waffles&category=Breakfast">Pumpkin Waffles</a><br>
           <a href="/recipes?recipe=Banana%20Muffins&category=Breakfast">Banana Muffins</a><br>
           <a href="/recipes?recipe=Pumpkin%20Muffins&category=Breakfast">Pumpkin Muffins</a><br>
-        </div>
-        <button class="accordion">Chicken</button>
-        <div class="panel">
-          <a href="/recipes?recipe=Orange%20Chicken&category=Asian">Orange Chicken</a><br>
-          <a href="/recipes?recipe=Sesame%20Chicken&category=Asian">Sesame Chicken</a><br>
-          <a href="/recipes?recipe=Szechuan%20Chicken&category=Asian">Szechuan Chicken</a><br>
-          <a href="/recipes?recipe=Korean%20Meatballs&category=Asian">Korean Meatballs</a>
+          <a href="/recipes?recipe=Turkey%20Sausage&category=Breakfast">Turkey Sausage</a><br>
         </div>
         <button class="accordion">Dessert</button>
         <div class="panel">
@@ -61,6 +62,11 @@
         <div class="panel">
           <a href="/recipes?recipe=Meatball%20Marinara&category=Italian">Meatball Marinara</a><br>
           <a href="/recipes?recipe=Pizza&category=Italian">Pizza</a>
+        </div>
+        <button class="accordion">Meditteranean</button>
+        <div class="panel">
+          <a href="/recipes?recipe=Red%20Lamb&category=Meditteranean">Red Lamb</a><br>
+          <a href="/recipes?recipe=Roasted%20Cauliflower&category=Meditteranean">Roasted Cauliflower</a><br>
         </div>
         <button class="accordion">Seafood</button>
         <div class="panel">
@@ -73,7 +79,6 @@
         <div class="panel">
           <a href="/recipes?recipe=Asian%20Carrots&category=Vegetables">Asian Carrots</a><br>
           <a href="/recipes?recipe=Diced%20Potatoes&category=Vegetables">Diced Potatoes</a><br>
-          <a href="/recipes?recipe=Roasted%20Cauliflower&category=Vegetables">Roasted Cauliflower</a><br>
           <a href="/recipes?recipe=Sweet%20Potato%20Fries&category=Vegetables">Sweet Potato Fries</a>
         </div>
       </div><!--/siderbar-module-inset-->
