--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -65,6 +65,7 @@
         </div>
         <button class="accordion">Meditteranean</button>
         <div class="panel">
+          <a href="/recipes?recipe=Moroccan%20Meatballs&category=Meditteranean">Moroccan Meatballs</a><br>
           <a href="/recipes?recipe=Red%20Lamb&category=Meditteranean">Red Lamb</a><br>
           <a href="/recipes?recipe=Roasted%20Cauliflower&category=Meditteranean">Roasted Cauliflower</a><br>
         </div>
